--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,25 @@
             },
             "args": [],
             "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug integration test 'music'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--test=music",
+                    "--package=recommend"
+                ],
+                "filter": {
+                    "name": "music",
+                    "kind": "test"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
